ping-pong/manifests/gke/service-3.2.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-service
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
  - port: 80
    targetPort: 3000
